Overflow fix and fullscreen images. (#11)
* Refactor HTML files and add frontend assets.

* Fixed relative paths in base.html

* Added missing banner and removed relative paths.

* Added styles to the title and fixed search.

* Fixed search trigger

* Fixed main form and added some css.

* Fix x-axis scrollbar

* Fixed overflowing banner

* Fixed overflowing elements (SDPI devices bug)

* Added ability to see results in full screen.

* Minor bugfixes

* Minor bugfixes 2 JS MODULE

--- a/static/app.css
+++ b/static/app.css
@@ -1,3 +1,8 @@
+/*
+    Frontend skin for Autodevoir@FSM
+    Author : Zaafouri Mohamed Rayen
+    E-mail : mohamedrayenzaafouri@gmail.com
+*/
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
@@ -33,9 +38,7 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
-    
 }
-
 .hero{
     width: 100vw;
     height: 10rem;
@@ -47,6 +50,7 @@ body{
     color: white;
     padding-bottom: 3rem;
     box-sizing: content-box;
+    max-width: 50rem;
 }
 .hero > a > h1{
     color: white!important;
@@ -70,9 +74,8 @@ body{
     justify-content: center;
     flex-direction: column;
     padding: 1rem;
-    max-width: 55rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
-
+    max-width: 30rem;
 }
 
 .content>p{
@@ -131,7 +134,6 @@ form{
     padding-right: 4rem;
     height: 3rem;
     width: 75%;
-    max-width: 30rem;
     
 }
 
@@ -174,14 +176,6 @@ form{
 .previously > li > button::after{
     content: "x";
 }
-.not-found{
-    
-}
-
-.not-found > ol {
-
-}
-
 .not-found > ol > li{
     font-family: 'Lato';
 }
@@ -229,11 +223,13 @@ form{
     border-bottom-left-radius: 1rem;
 }
 
+.found {
+    max-width: 85vw;
+}
 .found > h2{
     background-color: #27ae60;
     border-radius: 1rem;
     border-bottom-left-radius: 0px;
-    width: max-content;
     padding: .5rem;
     color: white;
     margin: 0;
@@ -269,7 +265,6 @@ form{
     border-radius: 1rem;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
-    width: max-content;
     padding: .5rem;
     color: white;
     margin: 0;
@@ -299,12 +294,25 @@ hr{
     border: .01rem solid #090979;
     width: 75%;
 }
-.credit{
+.call-me-girls{
     position: fixed;
     bottom: 1%;
 }
-.credit > span > * {
+.call-me-girls > span > * {
     all: unset;
     font-family: 'Pacifico'!important;
 }
-
+.fs-image-preview{
+    box-sizing: unset;
+    background: transparent;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(40px);
+    cursor: no-drop;
+}
